--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-card">
-                        <img src="profile.jpg" alt="Keyur Thakkar" class="profile-img">
+                        <img src="Orange_and_Beige_Geometric_Linked_In_Profile_Picture_ecfc15e67d.webp" alt="Keyur Thakkar" class="profile-img">
                         <div class="profile-overlay">
                             <div class="profile-stats">
                                 <div class="stat">
@@ -60,7 +60,7 @@
                                     <span class="stat-label">ROI Increase</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-number">5+</span>
+                                    <span class="stat-number">3+</span>
                                     <span class="stat-label">Years Experience</span>
                                 </div>
                             </div>
