--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <i class="fas fa-file-pdf"></i>
                         <h4>Download Resume</h4>
                         <p>View my complete experience and qualifications</p>
-                        <a href="https://drive.google.com/file/d/1-2X3Y4Z5A6B7C8D9E0F/view" target="_blank" class="btn btn-outline">Download PDF</a>
+                        <a href="https://drive.google.com/file/d/1vEjV2CR5WL5SqO9TsPSIiSrbI3rU457R/view" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                 </div>
             </div>
@@ -559,7 +559,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>keyur.thakkar@email.com</p>
+                            <p><a href="mailto:keyur123thakkar@gmail.com">keyur123thakkar@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -573,13 +573,13 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Location</h4>
-                            <p>San Francisco Bay Area</p>
+                            <p>Tempe, Arizona</p>
                         </div>
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form>
-                        <div class="form-group">
+                    <form action="mailto:keyur123thakkar@gmail.com" method="post" enctype="text/plain">
+                    <div class="form-group">
                             <input type="text" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
