--- a/index.html
+++ b/index.html
@@ -370,13 +370,10 @@
                 <div class="projects-carousel">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="legal_marketing_dashboard.png" alt="Legal Marketing Dashboard">
+                            <img src="side-view-woman-working-as-economist.jpg" alt="Legal Marketing Dashboard">
                             <div class="project-overlay">
                                 <div class="project-links">
-                                    <a href="marketing_dashboard.py" class="project-link">
-                                        <i class="fas fa-code"></i>
-                                    </a>
-                                    <a href="matplotlib_dashboard.py" class="project-link">
+                                    <a href="https://lookerstudio.google.com/reporting/f77b9836-1f8e-4d8c-853b-99d3d00d9a50" class="project-link">
                                         <i class="fas fa-chart-bar"></i>
                                     </a>
                                 </div>
