--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <i class="fas fa-file-pdf"></i>
                         <h4>Download Resume</h4>
                         <p>View my complete experience and qualifications</p>
-                        <a href="https://drive.google.com/file/d/1vEjV2CR5WL5SqO9TsPSIiSrbI3rU457R/view" target="_blank" class="btn btn-outline">Download PDF</a>
+                        <a href="https://drive.google.com/file/d/1vEjV2CR5WL5SqO9TsPSIiSrbI3rU457R/view?usp=sharing" target="_blank" class="btn btn-outline">Download PDF</a>
                     </div>
                 </div>
             </div>
@@ -359,160 +359,137 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <div class="section-header">
-                <h2>Featured Projects</h2>
-                <p>Real-world applications of data-driven marketing strategies</p>
-            </div>
-            <div class="projects-carousel-wrapper">
-                <button class="carousel-arrow left" aria-label="Scroll left"><i class="fas fa-chevron-left"></i></button>
-                <div class="projects-carousel">
-                    <div class="project-card">
-                        <div class="project-image">
-                            <img src="side-view-woman-working-as-economist.jpg" alt="Legal Marketing Dashboard">
-                            <div class="project-overlay">
-                                <div class="project-links">
-                                    <a href="https://lookerstudio.google.com/reporting/f77b9836-1f8e-4d8c-853b-99d3d00d9a50" class="project-link">
-                                        <i class="fas fa-chart-bar"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Legal Marketing Analytics Dashboard</h3>
-                            <p>Comprehensive dashboard for personal injury law firm marketing campaigns, featuring interactive visualizations and real-time performance metrics.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Streamlit</span>
-                                <span class="tech-tag">Plotly</span>
-                                <span class="tech-tag">Pandas</span>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-brain"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Contextual Bandit Marketing Campaign</h3>
-                            <p>Machine learning implementation for dynamic ad optimization using contextual bandits, resulting in improved click-through rates and conversion optimization.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Scikit-learn</span>
-                                <span class="tech-tag">Pandas</span>
-                                <span class="tech-tag">Matplotlib</span>
+<section id="projects" class="projects">
+    <div class="container">
+        <div class="section-header">
+            <h2>Featured Projects</h2>
+            <p>Real-world applications of data-driven marketing strategies</p>
+        </div>
+        <div class="projects-carousel-wrapper">
+            <button class="carousel-arrow left" aria-label="Scroll left"><i class="fas fa-chevron-left"></i></button>
+            <div class="projects-carousel">
+                <!-- Legal Marketing Analytics Dashboard -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/legal_marketing_dashboard.jpg" alt="Legal Marketing Dashboard">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://lookerstudio.google.com/reporting/f77b9836-1f8e-4d8c-853b-99d3d00d9a50" target="_blank" class="project-link">
+                                    <i class="fas fa-chart-bar"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-chart-pie"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Customer Segmentation Analysis</h3>
-                            <p>Advanced customer segmentation using clustering algorithms to identify high-value customer segments and optimize marketing spend allocation.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">K-means</span>
-                                <span class="tech-tag">RFM Analysis</span>
-                                <span class="tech-tag">Tableau</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- New Projects -->
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-poll"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Times Now - ETG Survey: "Pulse of Hindi Heartland"</h3>
-                            <p>Conducted and analyzed data for the widely-publicized ETG (Media Name for Y-creator Media) survey, featured prominently on Times Now. This survey gauged public opinion and sentiment across key regions, informing critical national debates and discussions.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Survey Analysis</span>
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Media Analytics</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-robot"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>AI for ITAR Data Export Compliance at ASU Innovation Lab by Honeywell</h3>
-                            <p>Partnered with Honeywell through the Technology Innovation Lab to design a framework for automating ITAR compliance, mitigating risks of fines and IP breaches. Proposed an AI-driven solution for secure export workflows and conducted in-depth analysis of regulations to ensure compliance for defense technologies.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">AI</span>
-                                <span class="tech-tag">Compliance</span>
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Honeywell</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-car-crash"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Predicting Traffic Collision Occurrence and Severity</h3>
-                            <p>As part Data Mining, Collaborated on project to predict traffic collision occurrence and severity in Tempe, AZ using Python and machine learning. Analyzed local datasets to identify risk factors and provided visualizations to support proactive city safety measures.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Machine Learning</span>
-                                <span class="tech-tag">Data Mining</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-project-diagram"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Strategic Data Visualization for PRIEC: Enhancing Regional Academic Collaboration</h3>
-                            <p>Developed a comprehensive presentation for the Politics of Race, Immigration, and Ethnicity Consortium (PRIEC), showcasing 20 years of institutional impact using data visualizations. Highlighted the growth of regional intellectual exchange, presenter diversity trends, and cost-benefit analysis compared to national conferences. This work supported strategic planning for the 20th anniversary and future NSF funding alignment.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Data Visualization</span>
-                                <span class="tech-tag">PRIEC</span>
-                                <span class="tech-tag">Tableau</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <i class="fas fa-bullhorn"></i>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>Digital Strategy Lead-PRIEC</h3>
-                            <p>Launched PRIEC's official website and curated SEO-optimized event registration and survey flows. Led PRIEC's email & digital strategy: built outreach system with Mailchimp, ran A/B tests (↑31% open, ↑21% CTR), launched BlueSky & LinkedIn, and created analytics dashboards to track engagement. Helped transform PRIEC's online presence and community reach.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Digital Strategy</span>
-                                <span class="tech-tag">SEO</span>
-                                <span class="tech-tag">Mailchimp</span>
-                                <span class="tech-tag">Analytics</span>
-                            </div>
+                    <div class="project-content">
+                        <h3>Legal Marketing Analytics Dashboard</h3>
+                        <p>Comprehensive dashboard for personal injury law firm marketing campaigns, featuring interactive visualizations and real-time performance metrics.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Streamlit</span>
+                            <span class="tech-tag">Plotly</span>
+                            <span class="tech-tag">Pandas</span>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-arrow right" aria-label="Scroll right"><i class="fas fa-chevron-right"></i></button>
+
+                <!-- Times Now - ETG Survey -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/etg_survey.jpg" alt="ETG Survey">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://www.timesnownews.com/videos/times-now/newshour/times-now-etg-survey-what-janta-really-thinks-pulse-of-hindi-heartland-newshour-debate-video-108334962" target="_blank" class="project-link">
+                                    <i class="fas fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Times Now - ETG Survey: "Pulse of Hindi Heartland"</h3>
+                        <p>Conducted and analyzed data for the widely-publicized ETG survey, featured prominently on Times Now.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Survey Analysis</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Media Analytics</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- AI for ITAR Data Export Compliance at ASU Innovation Lab by Honeywell -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/ai_itar_compliance.jpg" alt="AI ITAR Compliance">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://www.canva.com/design/DAGWkEjRHdo/MiEjfHcBYmlE-hUMZTFk2g/edit?utm_content=DAGWkEjRHdo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="project-link">
+                                    <i class="fas fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>AI for ITAR Data Export Compliance at ASU Innovation Lab by Honeywell</h3>
+                        <p>AI-driven solution for automating ITAR compliance to mitigate risks.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">AI</span>
+                            <span class="tech-tag">Compliance</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Honeywell</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Predicting Traffic Collision Occurrence -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/traffic_collision.jpg" alt="Traffic Collision Prediction">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://docs.google.com/presentation/d/1RL1ZV8SyT7BgpmdiydapC0OghF7A4DM3/edit?usp=sharing" target="_blank" class="project-link">
+                                    <i class="fas fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Predicting Traffic Collision Occurrence and Severity</h3>
+                        <p>Machine learning model to predict traffic collision occurrence in Tempe, AZ.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Machine Learning</span>
+                            <span class="tech-tag">Data Mining</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Strategic Data Visualization for PRIEC -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/priec_visualization.jpg" alt="PRIEC Data Visualization">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://docs.google.com/presentation/d/1cZidxdxB195HUwH-yt92K5TDhhJG9CSTuxvt9dQWM8s/edit?usp=sharing" target="_blank" class="project-link">
+                                    <i class="fas fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Strategic Data Visualization for PRIEC</h3>
+                        <p>Comprehensive visual analytics for enhancing regional academic collaboration.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">PRIEC</span>
+                            <span class="tech-tag">Tableau</span>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <button class="carousel-arrow right" aria-label="Scroll right"><i class="fas fa-chevron-right"></i></button>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
