--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <!-- Times Now - ETG Survey -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/etg_survey.jpg" alt="ETG Survey">
+                        <img src="times now.jpg" alt="ETG Survey">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://www.timesnownews.com/videos/times-now/newshour/times-now-etg-survey-what-janta-really-thinks-pulse-of-hindi-heartland-newshour-debate-video-108334962" target="_blank" class="project-link">
@@ -418,7 +418,7 @@
                 <!-- AI for ITAR Data Export Compliance at ASU Innovation Lab by Honeywell -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/ai_itar_compliance.jpg" alt="AI ITAR Compliance">
+                        <img src="ITAR .png" alt="AI ITAR Compliance">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://www.canva.com/design/DAGWkEjRHdo/MiEjfHcBYmlE-hUMZTFk2g/edit?utm_content=DAGWkEjRHdo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="project-link">
@@ -445,7 +445,7 @@
                         <img src="images/traffic_collision.jpg" alt="Traffic Collision Prediction">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://docs.google.com/presentation/d/1RL1ZV8SyT7BgpmdiydapC0OghF7A4DM3/edit?usp=sharing" target="_blank" class="project-link">
+                                <a href="https://www.canva.com/design/DAGCO2QuVWU/Y5ENUvwEI8q4OFarB8QHIA/edit?utm_content=DAGCO2QuVWU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="project-link">
                                     <i class="fas fa-link"></i>
                                 </a>
                             </div>
@@ -465,7 +465,7 @@
                 <!-- Strategic Data Visualization for PRIEC -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/priec_visualization.jpg" alt="PRIEC Data Visualization">
+                        <img src="Priec.png" alt="PRIEC Data Visualization">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://docs.google.com/presentation/d/1cZidxdxB195HUwH-yt92K5TDhhJG9CSTuxvt9dQWM8s/edit?usp=sharing" target="_blank" class="project-link">
