--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <!-- Predicting Traffic Collision Occurrence -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/traffic_collision.jpg" alt="Traffic Collision Prediction">
+                        <img src="traffic_collision.jpg" alt="Traffic Collision Prediction">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://www.canva.com/design/DAGCO2QuVWU/Y5ENUvwEI8q4OFarB8QHIA/edit?utm_content=DAGCO2QuVWU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="project-link">
