--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                         <i class="fab fa-linkedin-in"></i>
                         <div>
                             <h4>LinkedIn</h4>
-                            <p><a href="https://www.linkedin.com/in/keyur-thakkar/">linkedin.com/in/keyur-thakkar</a></p>
+                            <p><a href="https://www.linkedin.com/in/thakkar-keyur/">linkedin/thakkar-keyur</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
